Kafka code added and pom modified