@@ -4,16 +4,135 @@
   <artifactId>ZomatoBangaloreRestaurantsAnalysis</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
-    <sourceDirectory>src</sourceDirectory>
+    <sourceDirectory>src/main/scala</sourceDirectory>
+    <testSourceDirectory>src/test/scala</testSourceDirectory>
+
+    <pluginManagement>
     <plugins>
-      <plugin>
+      <!-- <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
-      </plugin>
+      </plugin> -->
+      
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.5.1</version>
+            <configuration>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
+            <compilerArgument>-proc:none</compilerArgument>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.0.2</version>
+        </plugin>
+        <plugin>
+            <groupId>net.alchim31.maven</groupId>
+            <artifactId>scala-maven-plugin</artifactId>
+            <version>3.2.2</version>
+            <executions>
+           <execution>
+            <goals>
+            <goal>compile</goal>
+            <goal>testCompile</goal>
+            </goals>
+            </execution>
+            </executions>
+            <configuration>
+            <checkMultipleScalaVersions>false</checkMultipleScalaVersions>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.7</version>
+            <configuration>
+            <skipTests>true</skipTests>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest-maven-plugin</artifactId>
+            <version>1.0</version>
+            <configuration>
+            <argLine>-XX:MaxPermSize=512m</argLine>
+            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+            <stdout>W</stdout> <!-- Skip coloring output -->
+            <testFailureIgnore>false</testFailureIgnore>
+            </configuration>
+            <executions>
+            <execution>
+            <id>test</id>
+            <goals>
+            <goal>test</goal>
+            </goals>
+            </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>2.2</version>
+            <executions>
+            <execution>
+            <id>jar-with-dependencies</id>
+            <phase>package</phase>
+            <goals>
+            <goal>shade</goal>
+            </goals>
+            <configuration>
+            <shadedArtifactAttached>true</shadedArtifactAttached>
+            <shadedClassifierName>jar-with-deps</shadedClassifierName>
+            <filters>
+            <filter>
+            <artifact>*:*</artifact>
+            <excludes>
+            <exclude>META-INF/*.SF</exclude>
+            <exclude>META-INF/*.DSA</exclude>
+            <exclude>META-INF/*.RSA</exclude>
+            </excludes>
+            </filter>
+            </filters>
+            </configuration>
+            </execution>
+            </executions>
+        </plugin>
     </plugins>
+    </pluginManagement>
   </build>
+  
+  <dependencies>
+      <dependency>
+          <groupId>org.apache.kafka</groupId>
+          <artifactId>kafka-clients</artifactId>
+          <version>2.6.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.spark</groupId>
+          <artifactId>spark-sql-kafka-0-10_2.11</artifactId>
+          <version>2.3.0</version>
+      </dependency>
+       
+      <dependency>
+        <groupId>org.scalatest</groupId>
+        <artifactId>scalatest_2.11</artifactId>
+        <version>3.0.0-M15</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.scalactic</groupId>
+        <artifactId>scalactic_2.11</artifactId>
+        <version>3.0.0-M15</version>
+        <scope>test</scope>
+    </dependency>
+    
+  </dependencies>
+  
+  
 </project>
